// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`new-project prep prompt (static) > snapshot — fully static, no input 1`] = `
"NEW-PROJECT PREP — output a "new-project" payload to CREATE a new iBuild4you project.
The first key of your JSON output MUST be \`"_payload_type": "new-project"\`.
\`title\` is required. Include \`requester_email\`, \`requester_first_name\`, \`requester_last_name\` if known — these drive maker membership and email approval.

I'm a project builder on iBuild4you setting up a new intake project. Help me think through the setup: who the maker is, what we know about the idea, what the agent's first session should focus on, and any seed questions or directives that would help.

When I say "give me the output", produce ONLY valid JSON matching this schema (no markdown, no code fences). Use straight ASCII quotes only (" and '), never curly/smart quotes, and no non-breaking spaces. \`_payload_type\` MUST be the first key.

{
  "_payload_type": "new-project",
  "title": "Project name shown in the dashboard (required)",
  "requester_email": "Maker's email. Required to share the project with them later — creates a maker membership and approves the email for sign-in.",
  "requester_first_name": "Maker's first name",
  "requester_last_name": "Maker's last name",
  "context": "Background info the agent uses to skip basic discovery questions. Multi-sentence is fine.",
  "welcome_message": "The greeting the agent sends when the maker opens the project for the first time. Sets tone.",
  "nudge_message": "Optional. Verbatim outbound nudge text used to invite the maker back. Omit to let the system auto-draft.",
  "voice_sample": "Optional. One paragraph showing how the builder texts this person by hand — anchors AI-generated outbound copy.",
  "identity": "Optional. Custom agent persona override. Omit unless the builder explicitly wants a non-default persona.",
  "session_mode": "discover (broad exploration) or converge (narrow toward decisions). Defaults to discover when omitted.",
  "seed_questions": ["Questions the agent should weave into the first session"],
  "builder_directives": ["Instructions injected into the agent's system prompt — e.g. 'do not suggest technologies', 'focus on the ordering workflow'"],
  "layout_mockups": [
    {
      "title": "Strategy name — shown to the maker as a visual wireframe layout",
      "sections": [
        { "type": "hero|text|cta|gallery|form|signup|nav|footer|map|video", "label": "Section label", "description": "What this section does" }
      ]
    }
  ],
  "brief": {
    "problem": "What problem the maker is trying to solve. Omit the brief entirely if not enough is known yet.",
    "target_users": "Who the intended users are",
    "features": ["Feature 1", "Feature 2"],
    "constraints": "Any constraints, limitations, or things the maker explicitly doesn't want",
    "additional_context": "Any other relevant information that doesn't fit the above categories",
    "decisions": [{ "topic": "short label", "decision": "what was decided" }],
    "open_risks": ["plain-language description of something unresolved, unclear, or risky"]
  }
}

Rules:
- Only include top-level fields we've actually discussed. Omit fields with no signal — don't invent a \`nudge_message\` or \`voice_sample\` from thin air.
- \`session_opener\` is accepted as a legacy alias for \`welcome_message\` — prefer \`welcome_message\`.
- \`title\` is required; everything else is optional.
- Omit the entire \`brief\` object if not enough is known to seed it — the agent will discover during the first session.
- Extract brief content ONLY from what we discussed. Do not invent or assume.
- Features should be distinct, actionable items (not vague goals).
- A decision = the builder/maker committed to a specific choice (not just mentioned an option).
- Open risks = things that are unresolved, unclear, or risky. Examples: "no plan for getting first users", "pricing model undecided"."
`;

exports[`next-convo prep prompt — permute the inputs that actually flow in > snapshot — brief present (no decisions), 1 session 1`] = `
"NEXT-CONVO PREP — output a "next-convo" payload for an EXISTING project.
The first key of your JSON output MUST be \`"_payload_type": "next-convo"\`.
Do NOT include \`title\`, \`requester_email\`, or maker names — those are create-only fields.

I'm a project builder managing an intake project. I need your help preparing for the next session with my maker (the person whose app idea we're exploring).

When I say "give me the output", produce ONLY valid JSON matching this schema (no markdown, no code fences). Use straight ASCII quotes only (" and '), never curly/smart quotes, and no non-breaking spaces. \`_payload_type\` MUST be the first key.

{
  "_payload_type": "next-convo",
  "brief": {
    "problem": "What problem the user is trying to solve",
    "target_users": "Who the intended users are",
    "features": ["Feature 1", "Feature 2"],
    "constraints": "Any constraints, limitations, or things the user explicitly doesn't want",
    "additional_context": "Any other relevant information that doesn't fit the above categories",
    "decisions": [{ "topic": "short label", "decision": "what was decided" }],
    "open_risks": ["plain-language description of something unresolved, unclear, or risky"]
  },
  "welcome_message": "The greeting the agent sends when the maker opens the next session — sets tone and picks up where we left off",
  "nudge_message": "Optional. Verbatim outbound nudge text used to invite the maker back. Omit to let the system auto-draft.",
  "voice_sample": "Optional. One paragraph showing how the builder texts this person by hand — anchors AI-generated outbound copy.",
  "identity": "Optional. Custom agent persona override for this project. Omit unless the builder explicitly wants a non-default persona.",
  "context": "Optional. Background the agent uses to skip basic discovery questions. Update only if new background surfaced in the conversation.",
  "session_mode": "discover (broad exploration) or converge (narrow toward decisions)",
  "seed_questions": ["Questions the agent should weave into the early part of the next session"],
  "builder_directives": ["Instructions injected into the agent's system prompt to steer the conversation — e.g. 'push toward a decision on auth flow'"],
  "layout_mockups": [
    {
      "title": "Strategy name — shown to the maker as a visual wireframe layout",
      "sections": [
        { "type": "hero|text|cta|gallery|form|signup|nav|footer|map|video", "label": "Section label", "description": "What this section does" }
      ]
    }
  ]
}

Rules:
- Only include top-level fields the conversation actually addressed. Omit fields the builder didn't discuss — don't invent a \`nudge_message\` or \`voice_sample\` from thin air.
- \`session_opener\` is accepted as a legacy alias for \`welcome_message\` — prefer \`welcome_message\`.
- Extract brief content ONLY from what the user has actually said. Do not invent or assume.
- If a brief field has no information yet, use an empty string (or empty array for features/decisions/open_risks).
- Keep descriptions concise and in plain language.
- Features should be distinct, actionable items (not vague goals).
- If updating an existing brief, preserve information from it unless the conversation contradicts it.
- A decision = the user committed to a specific choice (not just mentioned an option). Each decision has a short topic label and the decision itself.
- Preserve prior decisions unless the user explicitly reversed one in the conversation.
- A decision may carry \`"locked": true\` — a durable constraint (e.g. a locked convention or do-not-use rule). NEVER drop, reword, or unset a locked decision; carry it forward verbatim with \`"locked": true\`. If the conversation contains a statement that contradicts a locked decision, keep the locked decision as-is and record the contradiction in \`open_risks\` (e.g. "conflicts with locked decision: <topic>") — do not silently overwrite it.
- Open risks = things that are unresolved, unclear, or risky based on the conversation. Extract from what the user actually said — don't invent risks. Examples: "no plan for getting first users", "pricing model undecided", "unclear how data gets into the system".

Please review the project data the builder will give you next and let's discuss:
- What went well in the conversation so far?
- What should the next session focus on?
- Should we stay in discover mode or switch to converge?

<project>
Title: Sam's Cafe
Sessions so far: 1
</project>

<current_brief>
{
  "problem": "no online ordering",
  "target_users": "cafe customers",
  "features": [
    "catalog"
  ],
  "constraints": "",
  "additional_context": "",
  "decisions": [],
  "open_risks": []
}
</current_brief>

<conversation_history>

</conversation_history>"
`;

exports[`next-convo prep prompt — permute the inputs that actually flow in > snapshot — brief with locked + unlocked decisions and open_risks (case 8) 1`] = `
"NEXT-CONVO PREP — output a "next-convo" payload for an EXISTING project.
The first key of your JSON output MUST be \`"_payload_type": "next-convo"\`.
Do NOT include \`title\`, \`requester_email\`, or maker names — those are create-only fields.

I'm a project builder managing an intake project. I need your help preparing for the next session with my maker (the person whose app idea we're exploring).

When I say "give me the output", produce ONLY valid JSON matching this schema (no markdown, no code fences). Use straight ASCII quotes only (" and '), never curly/smart quotes, and no non-breaking spaces. \`_payload_type\` MUST be the first key.

{
  "_payload_type": "next-convo",
  "brief": {
    "problem": "What problem the user is trying to solve",
    "target_users": "Who the intended users are",
    "features": ["Feature 1", "Feature 2"],
    "constraints": "Any constraints, limitations, or things the user explicitly doesn't want",
    "additional_context": "Any other relevant information that doesn't fit the above categories",
    "decisions": [{ "topic": "short label", "decision": "what was decided" }],
    "open_risks": ["plain-language description of something unresolved, unclear, or risky"]
  },
  "welcome_message": "The greeting the agent sends when the maker opens the next session — sets tone and picks up where we left off",
  "nudge_message": "Optional. Verbatim outbound nudge text used to invite the maker back. Omit to let the system auto-draft.",
  "voice_sample": "Optional. One paragraph showing how the builder texts this person by hand — anchors AI-generated outbound copy.",
  "identity": "Optional. Custom agent persona override for this project. Omit unless the builder explicitly wants a non-default persona.",
  "context": "Optional. Background the agent uses to skip basic discovery questions. Update only if new background surfaced in the conversation.",
  "session_mode": "discover (broad exploration) or converge (narrow toward decisions)",
  "seed_questions": ["Questions the agent should weave into the early part of the next session"],
  "builder_directives": ["Instructions injected into the agent's system prompt to steer the conversation — e.g. 'push toward a decision on auth flow'"],
  "layout_mockups": [
    {
      "title": "Strategy name — shown to the maker as a visual wireframe layout",
      "sections": [
        { "type": "hero|text|cta|gallery|form|signup|nav|footer|map|video", "label": "Section label", "description": "What this section does" }
      ]
    }
  ]
}

Rules:
- Only include top-level fields the conversation actually addressed. Omit fields the builder didn't discuss — don't invent a \`nudge_message\` or \`voice_sample\` from thin air.
- \`session_opener\` is accepted as a legacy alias for \`welcome_message\` — prefer \`welcome_message\`.
- Extract brief content ONLY from what the user has actually said. Do not invent or assume.
- If a brief field has no information yet, use an empty string (or empty array for features/decisions/open_risks).
- Keep descriptions concise and in plain language.
- Features should be distinct, actionable items (not vague goals).
- If updating an existing brief, preserve information from it unless the conversation contradicts it.
- A decision = the user committed to a specific choice (not just mentioned an option). Each decision has a short topic label and the decision itself.
- Preserve prior decisions unless the user explicitly reversed one in the conversation.
- A decision may carry \`"locked": true\` — a durable constraint (e.g. a locked convention or do-not-use rule). NEVER drop, reword, or unset a locked decision; carry it forward verbatim with \`"locked": true\`. If the conversation contains a statement that contradicts a locked decision, keep the locked decision as-is and record the contradiction in \`open_risks\` (e.g. "conflicts with locked decision: <topic>") — do not silently overwrite it.
- Open risks = things that are unresolved, unclear, or risky based on the conversation. Extract from what the user actually said — don't invent risks. Examples: "no plan for getting first users", "pricing model undecided", "unclear how data gets into the system".

Please review the project data the builder will give you next and let's discuss:
- What went well in the conversation so far?
- What should the next session focus on?
- Should we stay in discover mode or switch to converge?

<project>
Title: Sam's Cafe
Sessions so far: 2
</project>

<current_brief>
{
  "problem": "Customers cannot order online",
  "target_users": "Local cafe regulars",
  "features": [
    "Online ordering",
    "Pickup scheduling"
  ],
  "constraints": "Must work on mobile",
  "additional_context": "",
  "decisions": [
    {
      "topic": "Payments",
      "decision": "Stripe only",
      "locked": true
    },
    {
      "topic": "Platform",
      "decision": "Web-first, no native app at launch"
    }
  ],
  "open_risks": [
    "No plan yet for first 10 users"
  ]
}
</current_brief>

<conversation_history>

</conversation_history>"
`;

exports[`next-convo prep prompt — permute the inputs that actually flow in > snapshot — empty: no brief, no history, session 0 1`] = `
"NEXT-CONVO PREP — output a "next-convo" payload for an EXISTING project.
The first key of your JSON output MUST be \`"_payload_type": "next-convo"\`.
Do NOT include \`title\`, \`requester_email\`, or maker names — those are create-only fields.

I'm a project builder managing an intake project. I need your help preparing for the next session with my maker (the person whose app idea we're exploring).

When I say "give me the output", produce ONLY valid JSON matching this schema (no markdown, no code fences). Use straight ASCII quotes only (" and '), never curly/smart quotes, and no non-breaking spaces. \`_payload_type\` MUST be the first key.

{
  "_payload_type": "next-convo",
  "brief": {
    "problem": "What problem the user is trying to solve",
    "target_users": "Who the intended users are",
    "features": ["Feature 1", "Feature 2"],
    "constraints": "Any constraints, limitations, or things the user explicitly doesn't want",
    "additional_context": "Any other relevant information that doesn't fit the above categories",
    "decisions": [{ "topic": "short label", "decision": "what was decided" }],
    "open_risks": ["plain-language description of something unresolved, unclear, or risky"]
  },
  "welcome_message": "The greeting the agent sends when the maker opens the next session — sets tone and picks up where we left off",
  "nudge_message": "Optional. Verbatim outbound nudge text used to invite the maker back. Omit to let the system auto-draft.",
  "voice_sample": "Optional. One paragraph showing how the builder texts this person by hand — anchors AI-generated outbound copy.",
  "identity": "Optional. Custom agent persona override for this project. Omit unless the builder explicitly wants a non-default persona.",
  "context": "Optional. Background the agent uses to skip basic discovery questions. Update only if new background surfaced in the conversation.",
  "session_mode": "discover (broad exploration) or converge (narrow toward decisions)",
  "seed_questions": ["Questions the agent should weave into the early part of the next session"],
  "builder_directives": ["Instructions injected into the agent's system prompt to steer the conversation — e.g. 'push toward a decision on auth flow'"],
  "layout_mockups": [
    {
      "title": "Strategy name — shown to the maker as a visual wireframe layout",
      "sections": [
        { "type": "hero|text|cta|gallery|form|signup|nav|footer|map|video", "label": "Section label", "description": "What this section does" }
      ]
    }
  ]
}

Rules:
- Only include top-level fields the conversation actually addressed. Omit fields the builder didn't discuss — don't invent a \`nudge_message\` or \`voice_sample\` from thin air.
- \`session_opener\` is accepted as a legacy alias for \`welcome_message\` — prefer \`welcome_message\`.
- Extract brief content ONLY from what the user has actually said. Do not invent or assume.
- If a brief field has no information yet, use an empty string (or empty array for features/decisions/open_risks).
- Keep descriptions concise and in plain language.
- Features should be distinct, actionable items (not vague goals).
- If updating an existing brief, preserve information from it unless the conversation contradicts it.
- A decision = the user committed to a specific choice (not just mentioned an option). Each decision has a short topic label and the decision itself.
- Preserve prior decisions unless the user explicitly reversed one in the conversation.
- A decision may carry \`"locked": true\` — a durable constraint (e.g. a locked convention or do-not-use rule). NEVER drop, reword, or unset a locked decision; carry it forward verbatim with \`"locked": true\`. If the conversation contains a statement that contradicts a locked decision, keep the locked decision as-is and record the contradiction in \`open_risks\` (e.g. "conflicts with locked decision: <topic>") — do not silently overwrite it.
- Open risks = things that are unresolved, unclear, or risky based on the conversation. Extract from what the user actually said — don't invent risks. Examples: "no plan for getting first users", "pricing model undecided", "unclear how data gets into the system".

Please review the project data the builder will give you next and let's discuss:
- What went well in the conversation so far?
- What should the next session focus on?
- Should we stay in discover mode or switch to converge?

<project>
Title: Untitled
Sessions so far: 0
</project>

<current_brief>
No brief yet
</current_brief>

<conversation_history>

</conversation_history>"
`;

exports[`next-convo prep prompt — permute the inputs that actually flow in > snapshot — with conversation history, higher session count 1`] = `
"NEXT-CONVO PREP — output a "next-convo" payload for an EXISTING project.
The first key of your JSON output MUST be \`"_payload_type": "next-convo"\`.
Do NOT include \`title\`, \`requester_email\`, or maker names — those are create-only fields.

I'm a project builder managing an intake project. I need your help preparing for the next session with my maker (the person whose app idea we're exploring).

When I say "give me the output", produce ONLY valid JSON matching this schema (no markdown, no code fences). Use straight ASCII quotes only (" and '), never curly/smart quotes, and no non-breaking spaces. \`_payload_type\` MUST be the first key.

{
  "_payload_type": "next-convo",
  "brief": {
    "problem": "What problem the user is trying to solve",
    "target_users": "Who the intended users are",
    "features": ["Feature 1", "Feature 2"],
    "constraints": "Any constraints, limitations, or things the user explicitly doesn't want",
    "additional_context": "Any other relevant information that doesn't fit the above categories",
    "decisions": [{ "topic": "short label", "decision": "what was decided" }],
    "open_risks": ["plain-language description of something unresolved, unclear, or risky"]
  },
  "welcome_message": "The greeting the agent sends when the maker opens the next session — sets tone and picks up where we left off",
  "nudge_message": "Optional. Verbatim outbound nudge text used to invite the maker back. Omit to let the system auto-draft.",
  "voice_sample": "Optional. One paragraph showing how the builder texts this person by hand — anchors AI-generated outbound copy.",
  "identity": "Optional. Custom agent persona override for this project. Omit unless the builder explicitly wants a non-default persona.",
  "context": "Optional. Background the agent uses to skip basic discovery questions. Update only if new background surfaced in the conversation.",
  "session_mode": "discover (broad exploration) or converge (narrow toward decisions)",
  "seed_questions": ["Questions the agent should weave into the early part of the next session"],
  "builder_directives": ["Instructions injected into the agent's system prompt to steer the conversation — e.g. 'push toward a decision on auth flow'"],
  "layout_mockups": [
    {
      "title": "Strategy name — shown to the maker as a visual wireframe layout",
      "sections": [
        { "type": "hero|text|cta|gallery|form|signup|nav|footer|map|video", "label": "Section label", "description": "What this section does" }
      ]
    }
  ]
}

Rules:
- Only include top-level fields the conversation actually addressed. Omit fields the builder didn't discuss — don't invent a \`nudge_message\` or \`voice_sample\` from thin air.
- \`session_opener\` is accepted as a legacy alias for \`welcome_message\` — prefer \`welcome_message\`.
- Extract brief content ONLY from what the user has actually said. Do not invent or assume.
- If a brief field has no information yet, use an empty string (or empty array for features/decisions/open_risks).
- Keep descriptions concise and in plain language.
- Features should be distinct, actionable items (not vague goals).
- If updating an existing brief, preserve information from it unless the conversation contradicts it.
- A decision = the user committed to a specific choice (not just mentioned an option). Each decision has a short topic label and the decision itself.
- Preserve prior decisions unless the user explicitly reversed one in the conversation.
- A decision may carry \`"locked": true\` — a durable constraint (e.g. a locked convention or do-not-use rule). NEVER drop, reword, or unset a locked decision; carry it forward verbatim with \`"locked": true\`. If the conversation contains a statement that contradicts a locked decision, keep the locked decision as-is and record the contradiction in \`open_risks\` (e.g. "conflicts with locked decision: <topic>") — do not silently overwrite it.
- Open risks = things that are unresolved, unclear, or risky based on the conversation. Extract from what the user actually said — don't invent risks. Examples: "no plan for getting first users", "pricing model undecided", "unclear how data gets into the system".

Please review the project data the builder will give you next and let's discuss:
- What went well in the conversation so far?
- What should the next session focus on?
- Should we stay in discover mode or switch to converge?

<project>
Title: Sam's Cafe
Sessions so far: 4
</project>

<current_brief>
{
  "problem": "Customers cannot order online",
  "target_users": "Local cafe regulars",
  "features": [
    "Online ordering",
    "Pickup scheduling"
  ],
  "constraints": "Must work on mobile",
  "additional_context": "",
  "decisions": [
    {
      "topic": "Payments",
      "decision": "Stripe only",
      "locked": true
    },
    {
      "topic": "Platform",
      "decision": "Web-first, no native app at launch"
    }
  ],
  "open_risks": [
    "No plan yet for first 10 users"
  ]
}
</current_brief>

<conversation_history>
Assistant: Welcome back — where did we land on payments?

User: Stripe is locked. Now I want to add gift cards.
</conversation_history>"
`;
